--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,15 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <nav class="header-navigation">
           <a href="./index.html" class="logo"
             >Web<span class="logo-part">Studio</span></a
           >
@@ -62,30 +62,30 @@
       <!-- Features section -->
       <section class="features-container section">
         <div class="container">
-          <h2 hidden>Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
-            <li>
+            <li class="features-list-content">
               <h3 class="features-title">Strategy</h3>
               <p class="features-content">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-list-content">
               <h3 class="features-title">Punctuality</h3>
               <p class="features-content">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-list-content">
               <h3 class="features-title">Diligence</h3>
               <p class="features-content">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-list-content">
               <h3 class="features-title">Technologies</h3>
               <p class="features-content">
                 Design practice focused on digital experiences. We bring forth a
@@ -156,7 +156,7 @@
         <div class="container portfolio-container">
           <h2 class="portfolio-container-title">Our Portfolio</h2>
           <ul class="portfolio-cards-list">
-            <li class="portfolio-cards row-1">
+            <li class="portfolio-cards row">
               <img
                 src="./images/bank-app-img.jpg"
                 alt="Banking App"
@@ -168,7 +168,7 @@
                 <p class="portfolio-cards-content">App</p>
               </div>
             </li>
-            <li class="portfolio-cards row-1">
+            <li class="portfolio-cards row">
               <img
                 src="./images/payment-img.jpg"
                 alt="Cashless Payment"
@@ -180,7 +180,7 @@
                 <p class="portfolio-cards-content">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-cards row-1">
+            <li class="portfolio-cards row">
               <img
                 src="./images/meditation-app-img.jpg"
                 alt="Meditation App"
@@ -192,7 +192,7 @@
                 <p class="portfolio-cards-content">App</p>
               </div>
             </li>
-            <li class="portfolio-cards">
+            <li class="portfolio-cards row">
               <img
                 src="./images/taxi-service-img.jpg"
                 alt="Taxi Service"
@@ -204,7 +204,7 @@
                 <p class="portfolio-cards-content">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-cards">
+            <li class="portfolio-cards row">
               <img
                 src="./images/screen-img.jpg"
                 alt="Screen Illustrations"
@@ -216,7 +216,7 @@
                 <p class="portfolio-cards-content">Design</p>
               </div>
             </li>
-            <li class="portfolio-cards">
+            <li class="portfolio-cards row">
               <img
                 src="./images/courses-img.jpg"
                 alt="Online Courses"
