--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="container portfolio-container">
           <h2 class="portfolio-container-title">Our Portfolio</h2>
           <ul class="portfolio-cards-list">
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/bank-app-img.jpg"
                 alt="Banking App"
@@ -168,7 +168,7 @@
                 <p class="portfolio-cards-content">App</p>
               </div>
             </li>
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/payment-img.jpg"
                 alt="Cashless Payment"
@@ -180,7 +180,7 @@
                 <p class="portfolio-cards-content">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/meditation-app-img.jpg"
                 alt="Meditation App"
@@ -192,7 +192,7 @@
                 <p class="portfolio-cards-content">App</p>
               </div>
             </li>
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/taxi-service-img.jpg"
                 alt="Taxi Service"
@@ -204,7 +204,7 @@
                 <p class="portfolio-cards-content">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/screen-img.jpg"
                 alt="Screen Illustrations"
@@ -216,7 +216,7 @@
                 <p class="portfolio-cards-content">Design</p>
               </div>
             </li>
-            <li class="portfolio-cards row">
+            <li class="portfolio-cards">
               <img
                 src="./images/courses-img.jpg"
                 alt="Online Courses"
